Add JSONRPC public API client

--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -13,6 +13,9 @@
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
         "build": "npm-run-all clean-dist build-*",
+        "generate:client": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/experimental/generated/client.ts && rm -r tmp",
+        "generate:test": "ts-interface-builder src/experimental/generated/client.ts",
+        "generate": "npm-run-all generate:*",
         "test": "jest --detectOpenHandles --forceExit",
         "test:all": "npm run test && npm run test-smart-contract-example && npm run test-wallet",
         "test:watch": "jest --watch",
@@ -50,6 +53,7 @@
         "@massalabs/web3-utils": "^1.4.9-dev",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
+        "@open-rpc/client-js": "^1.8.1",
         "@types/ws": "^8.5.4",
         "@web3pack/base58-check": "^1.0.3",
         "axios": "^0.26.1",
@@ -67,6 +71,7 @@
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
+        "@open-rpc/generator": "^1.22.3",
         "@types/bn.js": "^5.1.1",
         "@types/jest": "^29.5.5",
         "@types/node": "^18.13.0",
@@ -82,6 +87,8 @@
         "npm-run-all": "^4.1.5",
         "ora": "^5.1.0",
         "rimraf": "^5.0.1",
+        "ts-interface-checker": "^1.0.2",
+        "ts-interface-builder": "^0.3.3",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
