--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -31,10 +31,7 @@
   },
   "homepage": "https://github.com/massalabs/massa-web3",
   "dependencies": {
-    "bignumber.js": "^9.1.2",
-    "buffer": "^6.0.3",
-    "events": "^3.3.0",
-    "string_decoder": "^1.3.0"
+    "bignumber.js": "^9.1.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
