add interface builder and checker

--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -13,7 +13,9 @@
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
         "build": "npm-run-all clean-dist build-*",
-        "generate": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/experimental/generated/client.ts && rm -r tmp",
+        "generate:client": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/experimental/generated/client.ts && rm -r tmp",
+        "generate:test": "ts-interface-builder src/experimental/generated/client.ts",
+        "generate": "npm-run-all generate:*",
         "test": "jest --detectOpenHandles --forceExit",
         "test:all": "npm run test && npm run test-smart-contract-example && npm run test-wallet",
         "test:watch": "jest --watch",
@@ -85,6 +87,8 @@
         "npm-run-all": "^4.1.5",
         "ora": "^5.1.0",
         "rimraf": "^5.0.1",
+        "ts-interface-checker": "^1.0.2",
+        "ts-interface-builder": "^0.3.3",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
