--- a/.github/workflows/workspace-check-formatting-and-run-tests.yml
+++ b/.github/workflows/workspace-check-formatting-and-run-tests.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 18
           cache: "npm"
-      - run: npm ci
+      - run: npm ci --verbose
       - run: npm run build
       - run: npm run fmt:check
       - run: npm test
