--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
   "bugs": {
     "url": "https://github.com/massalabs/massa-web3/issues"
   },
-  "homepage": "https://github.com/massalabs/massa-web3#readme"
+  "homepage": "https://github.com/massalabs/massa-web3#readme",
+  "dependencies": {
+    "@types/pbkdf2": "^3.1.2",
+    "pbkdf2": "^3.1.2"
+  }
 }
