--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -64,6 +64,7 @@
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "js-base64": "^3.7.5",
+        "secure-random": "^1.1.2",
         "string_decoder": "^1.3.0",
         "tslib": "^2.5.2",
         "util": "^0.12.5",
@@ -88,7 +89,6 @@
         "ora": "^5.1.0",
         "rimraf": "^5.0.1",
         "ts-interface-checker": "^1.0.2",
-        "ts-interface-builder": "^0.3.3",
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
