--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "prepare": "husky install",
+    "test:browser": "jest --config=jest.browser.config.js",
     "test": "jest --forceExit --detectOpenHandles",
     "test:cov": "npm run test:cov --ws --if-present",
     "test:all": "npm run test:all --ws --if-present",
@@ -23,8 +24,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^48.0.4",
     "husky": "^8.0.0",
+    "jest-puppeteer": "^10.0.1",
     "lint-staged": "^15.0.1",
     "prettier": "^3.2.4",
+    "puppeteer": "^22.6.3",
     "typescript": "^4.9.5"
   },
   "workspaces": [
