--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -66,6 +66,7 @@
         "js-base64": "^3.7.5",
         "secure-random": "^1.1.2",
         "string_decoder": "^1.3.0",
+        "ts-interface-builder": "^0.3.3",
         "tslib": "^2.5.2",
         "util": "^0.12.5",
         "varint": "^6.0.0"
