--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "homepage": "https://github.com/massalabs/massa-web3#readme",
   "dependencies": {
     "@types/pbkdf2": "^3.1.2",
+    "big-varint": "^0.1.3",
     "pbkdf2": "^3.1.2"
   }
 }
