--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -16,8 +16,9 @@
         "generate:client": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/experimental/generated/client.ts && rm -r tmp",
         "generate:test": "ts-interface-builder src/experimental/generated/client.ts",
         "generate": "npm-run-all generate:*",
-        "test": "jest --detectOpenHandles --forceExit",
-        "test:all": "npm run test && npm run test-smart-contract-example && npm run test-wallet",
+        "test": "jest --detectOpenHandles --forceExit ./test/experimental/unit",
+        "test:integration": "jest --detectOpenHandles --forceExit ./test/experimental/integration",
+        "test:all": "npm run test && npm run test:integration",
         "test:watch": "jest --watch",
         "test:watch:all": "jest --watchAll",
         "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
