--- a/.github/workflows/workspace-integration-tests.yml
+++ b/.github/workflows/workspace-integration-tests.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Run integration tests
         env:
-          WALLET_SECRET_KEY: ${{ secrets.WALLET_SECRET_KEY }}
+          PRIVATE_KEY: ${{ secrets.WALLET_SECRET_KEY }}
         run: npm run test:integration
