--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -17,11 +17,11 @@
         "generate:test": "ts-interface-builder src/experimental/generated/client.ts",
         "generate": "npm-run-all generate:*",
         "test": "jest --detectOpenHandles --forceExit ./test/experimental/unit",
+        "test:cov": "jest --detectOpenHandles --coverage --forceExit ./test/experimental/unit",
         "test:integration": "jest --detectOpenHandles --forceExit ./test/experimental/integration",
         "test:all": "npm run test && npm run test:integration",
         "test:watch": "jest --watch",
         "test:watch:all": "jest --watchAll",
-        "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
         "check-types": "tsc --noEmit",
