--- a/.github/workflows/workspace-check-formatting-and-run-tests.yml
+++ b/.github/workflows/workspace-check-formatting-and-run-tests.yml
@@ -18,4 +18,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run fmt:check
-      - run: npm test
+      - name: unit test
+        run: npm test
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
