--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -66,6 +66,7 @@
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.3",
         "js-base64": "^3.7.5",
+        "js-yaml": "^4.1.0",
         "secure-random": "^1.1.2",
         "string_decoder": "^1.3.0",
         "ts-interface-builder": "^0.3.3",
