--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -81,6 +81,7 @@
         "@types/jest": "^29.5.5",
         "@types/node": "^18.13.0",
         "@types/secp256k1": "^4.0.3",
+        "@types/varint": "^6.0.3",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
         "babel-jest": "^29.7.0",
