--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
     "fmt:check": "npm run lint && npm run prettier"
   },
   "devDependencies": {
-    "@massalabs/eslint-config": "^0.0.10",
+    "@eslint/js": "^9.1.1",
     "@types/jest": "^29.5.5",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "bignumber.js": "^9.1.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^48.0.4",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.0",
     "is-ci": "^3.0.1",
     "jest-puppeteer": "^10.0.1",
     "lint-staged": "^15.0.1",
     "prettier": "^3.2.4",
     "puppeteer": "^22.6.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^7.8.0"
   },
   "workspaces": [
     "packages/web3-utils",
