--- a/.eslintignore
+++ b/.eslintignore
@@ -1,16 +1,8 @@
-bundle*.js
+build
+node_modules
+.github
+bundle.*
+docs
 dist
-packages/massa-web3/code-snippets
-packages/massa-web3/dist
-packages/massa-web3/examples
-packages/massa-web3/src/interfaces
-packages/massa-web3/src/utils
-packages/massa-web3/src/web3
-packages/massa-web3/src/index.ts
-packages/massa-web3/test
-packages/web3-utils
-**/generated/**
-*.config.js
-*.config.ts
-package*.json
-.eslintrc.cjs
+scripts
+**/generated/*
