--- a/packages/massa-web3/tsconfig.json
+++ b/packages/massa-web3/tsconfig.json
@@ -4,10 +4,11 @@
         "outDir": "./dist"
     },
     "include": [
-        "./src/**/*.ts"
+        "./src/experimental/**/*.ts"
     ],
     "exclude": [
         "node_modules",
         "**/*.spec.ts"
+        
     ]
 }
