578 improve code review (#581)
Co-authored-by: BenRey <br@massa.net>
Co-authored-by: ASAPSegfault <45430752+ASAPSegfault@users.noreply.github.com>
Co-authored-by: BenRey <44082144+Ben-Rey@users.noreply.github.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,15 @@
-build
-node_modules
-.github
-bundle.*
-docs
-dist
-scripts
-**/generated/*
+packages/web3-utils
+packages/massa-web3/examples
+packages/massa-web3/code-snippets
+packages/massa-web3/src/interfaces
+packages/massa-web3/src/utils
+packages/massa-web3/src/web3
+packages/massa-web3/src/index.ts
+packages/massa-web3/test
+**/generated/**
+**/dist/**
+**/docs/**
+*.config.js
+*.config.ts
+package*.json
+.eslintrc.cjs
