--- a/packages/massa-web3/tsconfig.json
+++ b/packages/massa-web3/tsconfig.json
@@ -4,7 +4,7 @@
         "outDir": "./dist"
     },
     "include": [
-        "./src/**/*.ts"
+        "./src/experimental/**/*.ts"
     ],
     "exclude": [
         "node_modules",
