successfull HTML generated file for test coverage dashboard using istanbul/nyc

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "prepare": "npx is-ci || husky install",
-    "test:browser": "jest --config=jest.browser.config.js",
+    "test:browser": "jest --config=jest.browser.config.js --coverage --coverageDirectory=coverage",
     "test": "jest --forceExit --detectOpenHandles",
-    "test:cov": "npm run test:cov --ws --if-present",
+    "test:cov": "npm run test:browser && jest --coverage --forceExit --detectOpenHandles --coverageDirectory=coverage && npx nyc merge coverage/ coverage/merged-coverage.json",
     "test:all": "npm run test:all --ws --if-present",
     "test:integration": "npm run test:integration --ws --if-present",
     "build": "npm run build --ws --if-present",
@@ -31,6 +31,7 @@
     "is-ci": "^3.0.1",
     "jest-puppeteer": "^10.0.1",
     "lint-staged": "^15.0.1",
+    "nyc": "^15.1.0",
     "prettier": "^3.2.4",
     "puppeteer": "^22.6.3",
     "typescript": "^4.9.5",
