--- a/.eslintignore
+++ b/.eslintignore
@@ -13,6 +13,7 @@ packages/massa-web3/src/web3
 packages/massa-web3/src/index.ts
 packages/massa-web3/test
 
+**/open_rpc/**
 **/generated/**
 **/dist/**
 **/docs/**
