--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@types/pbkdf2": "^3.1.2",
     "big-varint": "^0.1.3",
+    "decimal.js": "^10.4.3",
     "pbkdf2": "^3.1.2"
   }
 }
