--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -66,6 +66,7 @@
         "bs58check": "^3.0.1",
         "buffer": "^6.0.3",
         "crypto-js": "^4.1.1",
+        "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "js-base64": "^3.7.5",
         "js-yaml": "^4.1.0",
