Add the mns test to the test all command and remove dead code

--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -14,11 +14,12 @@
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
         "build": "npm-run-all clean-dist build-*",
         "test": "jest --detectOpenHandles --forceExit",
-        "test:all": "npm run test && npm run test-smart-contract-example && npm run test-wallet",
+        "test:all": "npm run test && npm run test-smart-contract-example && npm run test-mns && npm run test-wallet",
         "test:watch": "jest --watch",
         "test:watch:all": "jest --watchAll",
         "test:cov": "jest --coverage --silent --detectOpenHandles --forceExit",
         "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
+        "test-mns": "ts-node ./examples/smartContracts/nameResolver.ts",
         "test-wallet": "ts-node ./examples/wallet/index.ts",
         "test-name-service-resolver": "ts-node ./examples/smartContracts/nameResolver.ts",
         "check-types": "tsc --noEmit",
