--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -49,7 +49,7 @@
     ],
     "dependencies": {
         "@massalabs/wallet-provider": "^2.0.0",
-        "@massalabs/web3-utils": "^1.4.10",
+        "@massalabs/web3-utils": "1.4.11-dev.20240528170253",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@types/ws": "^8.5.4",
