--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -13,9 +13,9 @@
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
         "build": "npm-run-all clean-dist build-*",
-        "generate:client": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/experimental/generated/client.ts && rm -r tmp",
-        "generate:test": "ts-interface-builder src/experimental/generated/client.ts",
-        "generate:deployer": "ts-node ./deployer_generation/generate-deployer.ts",
+        "generate:client": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/generated/client.ts && rm -r tmp",
+        "generate:test": "ts-interface-builder src/generated/client.ts",
+        "generate:deployer": "ts-node src/deployerGeneration/generate-deployer.ts",
         "generate": "npm-run-all generate:*",
         "test": "jest --detectOpenHandles --forceExit ./test/unit",
         "test:cov": "jest --detectOpenHandles --coverage --forceExit",
