--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -24,15 +24,14 @@
         "test:all": "npm run test && npm run test:integration",
         "test:watch": "jest --watch",
         "test:watch:all": "jest --watchAll",
-        "test-smart-contract-example": "ts-node ./examples/smartContracts/index.ts",
-        "test-wallet": "ts-node ./examples/wallet/index.ts",
         "check-types": "tsc --noEmit",
         "doc": "typedoc src/index.ts --name massa-web3 --out docs/documentation/html --tsconfig tsconfig.json"
     },
     "author": "Massa Labs <info@massa.net>",
     "contributors": [
-        "Evgeni Pirianov",
-        "Yvan Sraka"
+        "Gregory Libert",
+        "Benjamin Reynes",
+        "Thomas Senechal "
     ],
     "license": "MIT",
     "homepage": "https://github.com/massalabs/massa-web3",
@@ -52,54 +51,33 @@
         "bundle.min.js"
     ],
     "dependencies": {
-        "@massalabs/wallet-provider": "^1.5.3-dev",
-        "@massalabs/web3-utils": "^1.4.9-dev",
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@open-rpc/client-js": "^1.8.1",
         "@open-rpc/schema-utils-js": "^2.0.2",
-        "@types/ws": "^8.5.4",
-        "@web3pack/base58-check": "^1.0.3",
-        "axios": "^0.26.1",
         "big-varint": "^0.1.3",
-        "bignumber.js": "^9.1.1",
-        "bip39": "^3.0.4",
         "bs58check": "^3.0.1",
-        "buffer": "^6.0.3",
-        "crypto-js": "^4.1.1",
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
-        "js-base64": "^3.7.5",
         "js-yaml": "^4.1.0",
         "secure-random": "^1.1.2",
         "string_decoder": "^1.3.0",
         "ts-interface-builder": "^0.3.3",
         "tslib": "^2.5.2",
-        "util": "^0.12.5",
         "varint": "^6.0.0"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
         "@open-rpc/generator": "^1.22.3",
-        "@types/bn.js": "^5.1.1",
-        "@types/jest": "^29.5.5",
         "@types/node": "^18.13.0",
-        "@types/secp256k1": "^4.0.3",
         "@types/varint": "^6.0.3",
-        "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
         "babel-jest": "^29.7.0",
-        "chalk": "^4.1.0",
         "jest": "^29.5.0",
-        "jest-environment-jsdom": "^29.5.0",
-        "jsdom": "^21.1.1",
-        "node-ts": "^5.1.2",
         "npm-run-all": "^4.1.5",
-        "ora": "^5.1.0",
         "rimraf": "^5.0.1",
         "ts-interface-checker": "^1.0.2",
         "ts-jest": "^29.1.0",
-        "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
         "typedoc": "^0.25.7",
         "typescript": "^4.9.5"
