--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -69,6 +69,7 @@
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
         "@open-rpc/generator": "^1.22.3",
+        "@types/jest": "^29.5.12",
         "@types/node": "^18.13.0",
         "@types/varint": "^6.0.3",
         "@typescript-eslint/parser": "^5.52.0",
