--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
         "varint": "^6.0.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.1.1",
         "@babel/preset-env": "^7.22.15",
         "@open-rpc/generator": "^1.22.3",
         "@types/jest": "^29.5.12",
@@ -102,8 +101,8 @@
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "typedoc": "^0.25.7",
-        "typescript-eslint": "^7.8.0",
-        "typescript": "^4.9.5"
+        "typescript": "^4.9.5",
+        "typescript-eslint": "^7.8.0"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
