fix ci coverage

--- a/.github/workflows/coverage-v2.yml
+++ b/.github/workflows/coverage-v2.yml
@@ -14,5 +14,5 @@ jobs:
               with:
                 custom-title: Coverage report for experimental massa-web3
                 prnumber: ${{ steps.findPr.outputs.number }}
-                working-directory: packages/massa-web3
+                working-directory: ./
                 test-script: npm test
