update open rpc test

--- a/open_rpc/tsconfig.json
+++ b/open_rpc/tsconfig.json
@@ -1,7 +1,4 @@
 {
-    "extends": "../tsconfig.base.json",
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
-    ]
+  "extends": "../tsconfig.base.json",
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
