--- a/packages/massa-web3/package.json
+++ b/packages/massa-web3/package.json
@@ -60,6 +60,7 @@
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "js-yaml": "^4.1.0",
+        "lodash": "^4.17.21",
         "secure-random": "^1.1.2",
         "string_decoder": "^1.3.0",
         "ts-interface-builder": "^0.3.3",
