update workflow trigger

--- a/.github/workflows/openrpc-test.yml
+++ b/.github/workflows/openrpc-test.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'src/client/**'
       - 'test/integration/publicAPI.spec.ts'
+      - '.github/workflows/openrpc-test.yml'
   workflow_call:
 
 env:
