--- a/.github/workflows/publish-next.yml
+++ b/.github/workflows/publish-next.yml
@@ -1,4 +1,4 @@
-name: (workspace) Npm publish next
+name: Npm publish next
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflows/check-formatting-and-run-tests.yml
+    uses: ./.github/workflows/integration-tests.yml
   publish-npm-next:
     needs: test
     runs-on: ubuntu-latest
