--- a/.github/workflows/coverage-v2.yml
+++ b/.github/workflows/coverage-v2.yml
@@ -7,6 +7,7 @@ jobs:
       uses: ./.github/workflows/unit-tests.yml
     coverage:
         runs-on: ubuntu-latest
+        needs: test
         steps:
             - uses: actions/checkout@v3
             - uses: jwalton/gh-find-current-pr@v1
