--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -2,12 +2,16 @@ name: (next) Integration tests
 
 on:
   workflow_call:
+    secrets:
+      PRIVATE_KEY:
+        required: true
 
 jobs:
   test:
     uses: ./.github/workflows/unit-tests.yml
   integration-tests:
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - uses: actions/checkout@v3
