--- a/.github/workflows/workspace-gen-deploy-docs.yml
+++ b/.github/workflows/workspace-gen-deploy-docs.yml
@@ -2,8 +2,8 @@ name: (workspace) Deploy documentation
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - doc
 
 jobs:
   deploy-typedoc:
@@ -16,13 +16,15 @@ jobs:
       - name: Generate doc
         run: |
           npm ci
+          npm run build
           npm run doc
-          mv docs/documentation/html massa-web3
+          mv ./packages/massa-web3/docs/documentation/html massa-web3
       - name: Deploy files
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.MASSANET_HOST }}
           username: ${{ secrets.MASSANET_USERNAME }}
           key: ${{ secrets.MASSANET_SSHKEY }}
+          port: ${{ secrets.MASSANET_PORT }}
           source: "./massa-web3"
           target: "/var/www/type-doc"
