--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "fmt": "npm run lint:fix && npm run prettier:fix",
-    "fmt:check": "npm run lint && npm run prettier"
+    "fmt:check": "npm run lint && npm run prettier",
+    "doc": "npm run doc --ws --if-present"
   },
   "devDependencies": {
     "@massalabs/eslint-config": "^0.0.10",
