--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
         "ts-node": "^10.9.1",
         "typedoc": "^0.25.7",
         "typescript": "^5.4.5",
-        "typescript-eslint": "^7.8.0"
+        "typescript-eslint": "^7.8.0",
+        "wait-for-expect": "^3.0.2"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
