--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "bs58check": "^4.0.0",
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
+        "eventemitter3": "^5.0.1",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
         "string_decoder": "^1.3.0",
