clean openRpc & client typings

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
         "build": "npm-run-all clean-dist build-*",
-        "generate:client": "open-rpc-generator generate -c open_rpc/openrpc.config.json && mv tmp/client/typescript/src/index.ts src/generated/client.ts && rm -r tmp",
-        "generate:test": "ts-interface-builder src/generated/client.ts",
+        "generate:types": "npx open-rpc-typings --output-ts src/generated --name-ts client-types -d open_rpc/massa.api.json",
+        "generate:test": "ts-interface-builder -o test/generated src/generated/client-types.ts",
         "generate:deployer": "ts-node scripts/deployerGeneration/generate-deployer.ts",
         "generate": "npm-run-all generate:*",
         "test": "jest --detectOpenHandles --forceExit ./test/unit",
@@ -62,19 +62,20 @@
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
         "@open-rpc/client-js": "^1.8.1",
-        "@open-rpc/schema-utils-js": "1.15.0",
+        "@open-rpc/meta-schema": "^1.14.9",
+        "@open-rpc/schema-utils-js": "^2.0.5",
         "bs58check": "^4.0.0",
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "eventemitter3": "^5.0.1",
+        "lodash": "^4.17.21",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
-        "tslib": "^2.5.2",
         "varint": "^6.0.0"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
-        "@open-rpc/generator": "^1.22.3",
+        "@open-rpc/typings": "^1.12.4",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.13",
         "@types/varint": "^6.0.3",
