--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "eventemitter3": "^5.0.1",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
+        "tslib": "^2.8.0",
         "varint": "^6.0.0"
     },
     "devDependencies": {
