--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,11 +5,13 @@ on:
     types: [created]
 
 jobs:
-  test:
-    uses: ./.github/workflows/unit-tests.yml
+  integration-tests:
+    uses: ./.github/workflows/integration-tests.yml
+    secrets:
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
 
   publish-npm:
-    needs: test
+    needs: integration-tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
