--- a/.github/workflows/coverage-v2.yml
+++ b/.github/workflows/coverage-v2.yml
@@ -19,3 +19,4 @@ jobs:
                 prnumber: ${{ steps.findPr.outputs.number }}
                 working-directory: ./
                 test-script: npm test
+                annotations: none
