--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "eventemitter3": "^5.0.1",
+        "@protobuf-ts/grpcweb-transport": "^2.9.1",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
         "tslib": "^2.8.0",
