--- a/package.json
+++ b/package.json
@@ -61,11 +61,12 @@
     "dependencies": {
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
+        "@protobuf-ts/grpcweb-transport": "^2.9.1",
+        "@protobuf-ts/plugin": "^2.9.4",
         "bs58check": "^4.0.0",
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "eventemitter3": "^5.0.1",
-        "@protobuf-ts/grpcweb-transport": "^2.9.1",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
         "tslib": "^2.8.0",
