--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
     "dependencies": {
         "@noble/ed25519": "^1.7.3",
         "@noble/hashes": "^1.2.0",
-        "@protobuf-ts/grpcweb-transport": "2.9.4",
         "bs58check": "^4.0.0",
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "eventemitter3": "^5.0.1",
+        "grpc-web": "^1.5.0",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
         "tslib": "^2.8.0",
@@ -74,6 +74,7 @@
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
         "@open-rpc/typings": "^1.12.4",
+        "@protobuf-ts/plugin": "^2.9.4",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.13",
         "@types/varint": "^6.0.3",
@@ -94,7 +95,6 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^3.2.4",
         "puppeteer": "^22.6.3",
-        "@protobuf-ts/plugin": "^2.9.4",
         "rimraf": "^5.0.1",
         "ts-interface-builder": "^0.3.3",
         "ts-interface-checker": "^1.0.2",
