temp fix for dist grpc generated files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
         "baseUrl": ".",
     },
     "include": [
-        "./src/**/*.ts"
-  ],
+        "./src/**/*.ts",
+    ],
     "exclude": [
         "node_modules",
         "dist",
