--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -5,9 +5,6 @@
     // Specifies the module system for the output bundle. "commonjs" is a standard for structuring and organizing JavaScript code.
     "module": "commonjs",
     // The location where the output files will be placed.
-    "outDir": "./dist/cmd/",
-    // Source map options
-    "sourceMap": true,
-    "inlineSources": true
+    "outDir": "./dist/cmd/"
   },
 }
