--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,10 @@
         "declaration": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
-        "jsx": "preserve",
         "allowJs": true,
         "importHelpers": true,
         "alwaysStrict": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
