--- a/.github/workflows/publish-next.yml
+++ b/.github/workflows/publish-next.yml
@@ -15,9 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
+          cache: "npm"
           registry-url: https://registry.npmjs.org
       - run: ./scripts/publish-next.sh
         env:
