--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
         "@babel/preset-env": "^7.22.15",
         "@open-rpc/typings": "^1.12.4",
         "@protobuf-ts/plugin": "^2.9.4",
-        "google-protobuf": "^3.21.4",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.13",
         "@types/varint": "^6.0.3",
@@ -87,6 +86,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jsdoc": "^48.0.4",
         "eslint-plugin-prettier": "^5.1.3",
+        "google-protobuf": "^3.21.4",
         "husky": "^9.0.11",
         "is-ci": "^3.0.1",
         "jest": "^29.5.0",
@@ -104,7 +104,8 @@
         "typedoc": "^0.25.7",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.8.0",
-        "wait-for-expect": "^3.0.2"
+        "wait-for-expect": "^3.0.2",
+        "xhr2": "^0.2.1"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
