--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
         "tslib": "^2.8.0",
-        "varint": "^6.0.0"
+        "varint": "^6.0.0",
+        "google-protobuf": "^3.21.4"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
@@ -86,7 +87,6 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jsdoc": "^48.0.4",
         "eslint-plugin-prettier": "^5.1.3",
-        "google-protobuf": "^3.21.4",
         "husky": "^9.0.11",
         "is-ci": "^3.0.1",
         "jest": "^29.5.0",
