--- a/package.json
+++ b/package.json
@@ -65,14 +65,17 @@
         "decimal.js": "^10.4.3",
         "dotenv": "^16.0.3",
         "eventemitter3": "^5.0.1",
+        "grpc-web": "^1.5.0",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
         "tslib": "^2.8.0",
-        "varint": "^6.0.0"
+        "varint": "^6.0.0",
+        "google-protobuf": "^3.21.4"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.22.15",
         "@open-rpc/typings": "^1.12.4",
+        "@protobuf-ts/plugin": "^2.9.4",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.13",
         "@types/varint": "^6.0.3",
@@ -101,7 +104,8 @@
         "typedoc": "^0.25.7",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.8.0",
-        "wait-for-expect": "^3.0.2"
+        "wait-for-expect": "^3.0.2",
+        "xhr2": "^0.2.1"
     },
     "optionalDependencies": {
         "bufferutil": "^4.0.7",
