add grpc readStorage test

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
         "test": "jest --detectOpenHandles --forceExit ./test/unit",
         "test:watch": "jest --watch ./test/unit",
         "test:browser": "jest --config=jest.browser.config.js",
-        "test:cov": "jest --detectOpenHandles --coverage --forceExit ./test/unit",
-        "test:cov:watch": "jest --detectOpenHandles --coverage --watch",
-        "test:integration": "jest --detectOpenHandles --forceExit --runInBand ./test/integration",
+        "test:cov": "jest --coverage --forceExit ./test/unit",
+        "test:cov:watch": "jest --coverage --watch",
+        "test:integration": "jest --forceExit --runInBand ./test/integration",
         "test:all": "npm run test && npm run test:integration",
         "test:watch:all": "jest --watchAll",
         "check-types": "tsc --noEmit",
