--- a/package.json
+++ b/package.json
@@ -64,11 +64,12 @@
         "bs58check": "^4.0.0",
         "dotenv": "^16.0.3",
         "eventemitter3": "^5.0.1",
+        "google-protobuf": "^3.21.4",
         "grpc-web": "^1.5.0",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
-        "varint": "^6.0.0",
-        "google-protobuf": "^3.21.4"
+        "tslib": "^2.8.1",
+        "varint": "^6.0.0"
     },
     "devDependencies": {
         "@open-rpc/typings": "^1.12.4",
