--- a/.github/workflows/publish-backport.yml
+++ b/.github/workflows/publish-backport.yml
@@ -20,6 +20,6 @@ jobs:
       - run: |
           npm ci
           npm run build
-          ./scripts/publish-next.sh ${{ inputs.tag }}
+          npm publish --access public --tag ${{ inputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
