--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@massalabs/massa-web3",
-    "version": "5.3.0",
+    "version": "5.2.1-dev.20250925213512",
     "description": "massa's web3 sdk client",
     "main": "dist/cmd/index.js",
     "module": "dist/esm/index.js",
