--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "clean-dist": "rimraf dist/*",
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
-        "build": "npm-run-all clean-dist build-*",
+        "copy-protobuf": "node scripts/copy-protobuf.js",
+        "build": "npm-run-all clean-dist build-* copy-protobuf",
         "generate:types": "npx open-rpc-typings --output-ts src/generated --name-ts client-types -d 'https://raw.githubusercontent.com/massalabs/massa/refs/tags/MAIN.3.0/massa-node/base_config/openrpc.json'",
         "generate:test": "ts-interface-builder -o test/generated src/generated/client-types.ts",
         "generate:deployer": "ts-node scripts/deployerGeneration/generate-deployer.ts",
