fix proto esm build

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "clean-dist": "rimraf dist/*",
         "build-esm": "tsc --project tsconfig.esm.json",
         "build-commonjs": "tsc --project tsconfig.commonjs.json",
-        "build": "npm-run-all clean-dist build-*",
+        "build": "npm-run-all clean-dist build-* fix-esm-exports",
+        "proto:generate": "bash scripts/proto_build.sh",
+        "fix-esm-exports": "node scripts/fix-esm-exports.js",
         "generate:types": "npx open-rpc-typings --output-ts src/generated --name-ts client-types -d 'https://raw.githubusercontent.com/massalabs/massa/refs/tags/MAIN.3.0/massa-node/base_config/openrpc.json'",
         "generate:test": "ts-interface-builder -o test/generated src/generated/client-types.ts",
         "generate:deployer": "ts-node scripts/deployerGeneration/generate-deployer.ts",
-        "generate": "npm-run-all generate:*",
+        "generate": "npm-run-all proto:generate generate:*",
         "test": "jest --detectOpenHandles --forceExit ./test/unit",
         "test:watch": "jest --watch ./test/unit",
         "test:browser": "jest --config=jest.browser.config.js",
