--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "grpc-web": "^1.5.0",
         "lodash.isequal": "^4.5.0",
         "secure-random": "^1.1.2",
+        "tslib": "^2.8.1",
         "varint": "^6.0.0"
     },
     "devDependencies": {
